--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ function keyDown(e){Podium={};var n=document.createEvent("KeyboardEvent");Object
             </template>
         </div>
     </div>
-    <button onclick="myFunction()">Autoplay</button>
-   <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;"> p</h1>
+    <button onclick="myFunction()">Galang</button>
+   <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;">Ft pajar</h1>
 </body>
 
 <script>
